POWR-94 - fixed permissions for media types on bureau and project group types

--- a/web/sites/default/config/group.role.bureau_office-admin.yml
+++ b/web/sites/default/config/group.role.bureau_office-admin.yml
@@ -12,92 +12,100 @@ audience: member
 group_type: bureau_office
 permissions_ui: true
 permissions:
-  - 'edit group'
-  - 'view group'
-  - 'administer members'
-  - 'update own group_membership content'
-  - 'leave group'
-  - 'view group_membership content'
-  - 'access group_node overview'
-  - 'create group_node:city_service entity'
-  - 'delete any group_node:city_service entity'
-  - 'delete own group_node:city_service entity'
-  - 'update any group_node:city_service entity'
-  - 'update own group_node:city_service entity'
-  - 'view group_node:city_service entity'
-  - 'view unpublished group_node:city_service entity'
-  - 'create group_node:city_service content'
-  - 'view group_node:city_service content'
-  - 'create group_node:news entity'
-  - 'delete any group_node:news entity'
-  - 'delete own group_node:news entity'
-  - 'update any group_node:news entity'
-  - 'update own group_node:news entity'
-  - 'view group_node:news entity'
-  - 'view unpublished group_node:news entity'
-  - 'create group_node:news content'
-  - 'view group_node:news content'
-  - 'create group_node:guide entity'
-  - 'delete any group_node:guide entity'
-  - 'delete own group_node:guide entity'
-  - 'update any group_node:guide entity'
-  - 'update own group_node:guide entity'
-  - 'view group_node:guide entity'
-  - 'view unpublished group_node:guide entity'
-  - 'create group_node:guide content'
-  - 'view group_node:guide content'
-  - 'create group_node:information entity'
-  - 'delete any group_node:information entity'
-  - 'delete own group_node:information entity'
-  - 'update any group_node:information entity'
-  - 'update own group_node:information entity'
-  - 'view group_node:information entity'
-  - 'view unpublished group_node:information entity'
-  - 'create group_node:information content'
-  - 'view group_node:information content'
-  - 'create group_node:event entity'
-  - 'delete any group_node:event entity'
-  - 'delete own group_node:event entity'
-  - 'update any group_node:event entity'
-  - 'update own group_node:event entity'
-  - 'view group_node:event entity'
-  - 'view unpublished group_node:event entity'
-  - 'create group_node:event content'
-  - 'view group_node:event content'
-  - 'create group_media:document entity'
-  - 'delete any group_media:document entity'
-  - 'delete own group_media:document entity'
-  - 'update any group_media:document entity'
-  - 'update own group_media:document entity'
-  - 'view group_media:document entity'
-  - 'view unpublished group_media:document entity'
-  - 'create group_media:document content'
-  - 'view group_media:document content'
-  - 'create group_media:image entity'
-  - 'delete any group_media:image entity'
-  - 'delete own group_media:image entity'
-  - 'update any group_media:image entity'
-  - 'update own group_media:image entity'
-  - 'view group_media:image entity'
-  - 'view unpublished group_media:image entity'
-  - 'create group_media:image content'
-  - 'view group_media:image content'
-  - 'create group_media:video entity'
-  - 'delete any group_media:video entity'
-  - 'delete own group_media:video entity'
-  - 'update any group_media:video entity'
-  - 'update own group_media:video entity'
-  - 'view group_media:video entity'
-  - 'view unpublished group_media:video entity'
-  - 'create group_media:video content'
-  - 'view group_media:video content'
-  - 'access group_media overview'
-  - 'create group_node:notification entity'
-  - 'delete any group_node:notification entity'
-  - 'delete own group_node:notification entity'
-  - 'update any group_node:notification entity'
-  - 'update own group_node:notification entity'
-  - 'view group_node:notification entity'
-  - 'view unpublished group_node:notification entity'
-  - 'create group_node:notification content'
-  - 'view group_node:notification content'
+  0: 'edit group'
+  1: 'view group'
+  2: 'administer members'
+  3: 'update own group_membership content'
+  4: 'leave group'
+  5: 'view group_membership content'
+  6: 'access group_node overview'
+  7: 'create group_node:city_service entity'
+  8: 'delete any group_node:city_service entity'
+  9: 'delete own group_node:city_service entity'
+  10: 'update any group_node:city_service entity'
+  11: 'update own group_node:city_service entity'
+  12: 'view group_node:city_service entity'
+  13: 'view unpublished group_node:city_service entity'
+  14: 'create group_node:city_service content'
+  15: 'view group_node:city_service content'
+  16: 'create group_node:news entity'
+  17: 'delete any group_node:news entity'
+  18: 'delete own group_node:news entity'
+  19: 'update any group_node:news entity'
+  20: 'update own group_node:news entity'
+  21: 'view group_node:news entity'
+  22: 'view unpublished group_node:news entity'
+  23: 'create group_node:news content'
+  24: 'view group_node:news content'
+  25: 'create group_node:guide entity'
+  26: 'delete any group_node:guide entity'
+  27: 'delete own group_node:guide entity'
+  28: 'update any group_node:guide entity'
+  29: 'update own group_node:guide entity'
+  30: 'view group_node:guide entity'
+  31: 'view unpublished group_node:guide entity'
+  32: 'create group_node:guide content'
+  33: 'view group_node:guide content'
+  34: 'create group_node:information entity'
+  35: 'delete any group_node:information entity'
+  36: 'delete own group_node:information entity'
+  37: 'update any group_node:information entity'
+  38: 'update own group_node:information entity'
+  39: 'view group_node:information entity'
+  40: 'view unpublished group_node:information entity'
+  41: 'create group_node:information content'
+  42: 'view group_node:information content'
+  43: 'create group_node:event entity'
+  44: 'delete any group_node:event entity'
+  45: 'delete own group_node:event entity'
+  46: 'update any group_node:event entity'
+  47: 'update own group_node:event entity'
+  48: 'view group_node:event entity'
+  49: 'view unpublished group_node:event entity'
+  50: 'create group_node:event content'
+  51: 'view group_node:event content'
+  52: 'create group_media:document entity'
+  53: 'delete any group_media:document entity'
+  54: 'delete own group_media:document entity'
+  55: 'update any group_media:document entity'
+  56: 'update own group_media:document entity'
+  57: 'view group_media:document entity'
+  58: 'view unpublished group_media:document entity'
+  59: 'create group_media:document content'
+  60: 'view group_media:document content'
+  61: 'create group_media:image entity'
+  62: 'delete any group_media:image entity'
+  63: 'delete own group_media:image entity'
+  64: 'update any group_media:image entity'
+  65: 'update own group_media:image entity'
+  66: 'view group_media:image entity'
+  67: 'view unpublished group_media:image entity'
+  68: 'create group_media:image content'
+  69: 'view group_media:image content'
+  70: 'create group_media:video entity'
+  71: 'delete any group_media:video entity'
+  72: 'delete own group_media:video entity'
+  73: 'update any group_media:video entity'
+  74: 'update own group_media:video entity'
+  75: 'view group_media:video entity'
+  76: 'view unpublished group_media:video entity'
+  77: 'create group_media:video content'
+  78: 'view group_media:video content'
+  79: 'access group_media overview'
+  80: 'create group_node:notification entity'
+  81: 'delete any group_node:notification entity'
+  82: 'delete own group_node:notification entity'
+  83: 'update any group_node:notification entity'
+  84: 'update own group_node:notification entity'
+  85: 'view group_node:notification entity'
+  86: 'view unpublished group_node:notification entity'
+  87: 'create group_node:notification content'
+  88: 'view group_node:notification content'
+  96: 'create group_media:audio entity'
+  97: 'delete any group_media:audio entity'
+  98: 'delete own group_media:audio entity'
+  99: 'update any group_media:audio entity'
+  100: 'update own group_media:audio entity'
+  101: 'view group_media:audio entity'
+  102: 'view unpublished group_media:audio entity'
+  103: 'create group_media:audio content'
