--- a/web/sites/default/config/group.role.bureau_office-anonymous.yml
+++ b/web/sites/default/config/group.role.bureau_office-anonymous.yml
@@ -12,13 +12,14 @@ audience: anonymous
 group_type: bureau_office
 permissions_ui: true
 permissions:
-  - 'view group'
-  - 'view group_node:city_service entity'
-  - 'view group_node:news entity'
-  - 'view group_node:guide entity'
-  - 'view group_node:information entity'
-  - 'view group_node:event entity'
-  - 'view group_media:document entity'
-  - 'view group_media:image entity'
-  - 'view group_media:video entity'
-  - 'view group_node:notification entity'
+  0: 'view group'
+  1: 'view group_node:city_service entity'
+  2: 'view group_node:news entity'
+  3: 'view group_node:guide entity'
+  4: 'view group_node:information entity'
+  5: 'view group_node:event entity'
+  6: 'view group_media:document entity'
+  7: 'view group_media:image entity'
+  8: 'view group_media:video entity'
+  9: 'view group_node:notification entity'
+  11: 'view group_media:audio entity'
