--- a/web/sites/default/config/group.role.project-admin.yml
+++ b/web/sites/default/config/group.role.project-admin.yml
@@ -67,12 +67,43 @@ permissions:
   52: 'view unpublished group_node:event entity'
   53: 'create group_node:event content'
   54: 'view group_node:event content'
-  101: 'create group_node:notification entity'
-  102: 'delete any group_node:notification entity'
-  103: 'delete own group_node:notification entity'
-  104: 'update any group_node:notification entity'
-  105: 'update own group_node:notification entity'
-  106: 'view group_node:notification entity'
-  107: 'view unpublished group_node:notification entity'
-  108: 'create group_node:notification content'
-  109: 'view group_node:notification content'
+  55: 'create group_node:notification entity'
+  56: 'delete any group_node:notification entity'
+  57: 'delete own group_node:notification entity'
+  58: 'update any group_node:notification entity'
+  59: 'update own group_node:notification entity'
+  60: 'view group_node:notification entity'
+  61: 'view unpublished group_node:notification entity'
+  62: 'create group_node:notification content'
+  63: 'view group_node:notification content'
+  73: 'create group_media:audio entity'
+  74: 'delete any group_media:audio entity'
+  75: 'delete own group_media:audio entity'
+  76: 'update any group_media:audio entity'
+  77: 'update own group_media:audio entity'
+  78: 'view group_media:audio entity'
+  79: 'view unpublished group_media:audio entity'
+  80: 'create group_media:audio content'
+  81: 'create group_media:document entity'
+  82: 'delete any group_media:document entity'
+  83: 'delete own group_media:document entity'
+  84: 'update any group_media:document entity'
+  85: 'update own group_media:document entity'
+  86: 'view group_media:document entity'
+  87: 'view unpublished group_media:document entity'
+  88: 'create group_media:document content'
+  89: 'create group_media:image entity'
+  90: 'delete any group_media:image entity'
+  91: 'delete own group_media:image entity'
+  92: 'update any group_media:image entity'
+  93: 'update own group_media:image entity'
+  94: 'view group_media:image entity'
+  95: 'view unpublished group_media:image entity'
+  96: 'create group_media:video entity'
+  97: 'delete any group_media:video entity'
+  98: 'delete own group_media:video entity'
+  99: 'update any group_media:video entity'
+  100: 'update own group_media:video entity'
+  101: 'view group_media:video entity'
+  102: 'view unpublished group_media:video entity'
+  103: 'create group_media:video content'
