--- a/web/sites/default/config/group.role.project-member.yml
+++ b/web/sites/default/config/group.role.project-member.yml
@@ -49,10 +49,38 @@ permissions:
   34: 'update own group_node:event entity'
   35: 'view group_node:event entity'
   36: 'view unpublished group_node:event entity'
-  67: 'create group_node:notification entity'
-  68: 'delete any group_node:notification entity'
-  69: 'delete own group_node:notification entity'
-  70: 'update any group_node:notification entity'
-  71: 'update own group_node:notification entity'
-  72: 'view group_node:notification entity'
-  73: 'view unpublished group_node:notification entity'
+  37: 'create group_node:notification entity'
+  38: 'delete any group_node:notification entity'
+  39: 'delete own group_node:notification entity'
+  40: 'update any group_node:notification entity'
+  41: 'update own group_node:notification entity'
+  42: 'view group_node:notification entity'
+  43: 'view unpublished group_node:notification entity'
+  46: 'create group_media:audio entity'
+  47: 'delete any group_media:audio entity'
+  48: 'delete own group_media:audio entity'
+  49: 'update any group_media:audio entity'
+  50: 'update own group_media:audio entity'
+  51: 'view group_media:audio entity'
+  52: 'view unpublished group_media:audio entity'
+  53: 'create group_media:document entity'
+  54: 'delete any group_media:document entity'
+  55: 'delete own group_media:document entity'
+  56: 'update any group_media:document entity'
+  57: 'update own group_media:document entity'
+  58: 'view group_media:document entity'
+  59: 'view unpublished group_media:document entity'
+  60: 'create group_media:image entity'
+  61: 'delete any group_media:image entity'
+  62: 'delete own group_media:image entity'
+  63: 'update any group_media:image entity'
+  64: 'update own group_media:image entity'
+  65: 'view group_media:image entity'
+  66: 'view unpublished group_media:image entity'
+  67: 'create group_media:video entity'
+  68: 'delete any group_media:video entity'
+  69: 'delete own group_media:video entity'
+  70: 'update any group_media:video entity'
+  71: 'update own group_media:video entity'
+  72: 'view group_media:video entity'
+  73: 'view unpublished group_media:video entity'
