--- a/web/sites/default/config/group.role.bureau_office-member.yml
+++ b/web/sites/default/config/group.role.bureau_office-member.yml
@@ -12,70 +12,77 @@ audience: member
 group_type: bureau_office
 permissions_ui: true
 permissions:
-  - 'view group'
-  - 'leave group'
-  - 'access group_node overview'
-  - 'create group_node:city_service entity'
-  - 'delete own group_node:city_service entity'
-  - 'update any group_node:city_service entity'
-  - 'update own group_node:city_service entity'
-  - 'view group_node:city_service entity'
-  - 'view unpublished group_node:city_service entity'
-  - 'delete any group_node:city_service entity'
-  - 'create group_node:news entity'
-  - 'delete any group_node:news entity'
-  - 'delete own group_node:news entity'
-  - 'update any group_node:news entity'
-  - 'update own group_node:news entity'
-  - 'view group_node:news entity'
-  - 'view unpublished group_node:news entity'
-  - 'create group_node:guide entity'
-  - 'delete any group_node:guide entity'
-  - 'delete own group_node:guide entity'
-  - 'update any group_node:guide entity'
-  - 'update own group_node:guide entity'
-  - 'view group_node:guide entity'
-  - 'view unpublished group_node:guide entity'
-  - 'create group_node:information entity'
-  - 'delete any group_node:information entity'
-  - 'delete own group_node:information entity'
-  - 'update any group_node:information entity'
-  - 'update own group_node:information entity'
-  - 'view group_node:information entity'
-  - 'view unpublished group_node:information entity'
-  - 'create group_node:event entity'
-  - 'delete any group_node:event entity'
-  - 'delete own group_node:event entity'
-  - 'update any group_node:event entity'
-  - 'update own group_node:event entity'
-  - 'view group_node:event entity'
-  - 'view unpublished group_node:event entity'
-  - 'create group_media:document entity'
-  - 'delete any group_media:document entity'
-  - 'delete own group_media:document entity'
-  - 'update any group_media:document entity'
-  - 'update own group_media:document entity'
-  - 'view group_media:document entity'
-  - 'view unpublished group_media:document entity'
-  - 'create group_media:image entity'
-  - 'delete any group_media:image entity'
-  - 'delete own group_media:image entity'
-  - 'update any group_media:image entity'
-  - 'update own group_media:image entity'
-  - 'view group_media:image entity'
-  - 'view unpublished group_media:image entity'
-  - 'create group_media:video entity'
-  - 'delete any group_media:video entity'
-  - 'delete own group_media:video entity'
-  - 'update any group_media:video entity'
-  - 'update own group_media:video entity'
-  - 'view group_media:video entity'
-  - 'view unpublished group_media:video entity'
-  - 'access group_media overview'
-  - 'create group_node:notification entity'
-  - 'delete any group_node:notification entity'
-  - 'delete own group_node:notification entity'
-  - 'update any group_node:notification entity'
-  - 'update own group_node:notification entity'
-  - 'view group_node:notification entity'
-  - 'view unpublished group_node:notification entity'
+  0: 'view group'
+  1: 'leave group'
+  2: 'access group_node overview'
+  3: 'create group_node:city_service entity'
+  4: 'delete own group_node:city_service entity'
+  5: 'update any group_node:city_service entity'
+  6: 'update own group_node:city_service entity'
+  7: 'view group_node:city_service entity'
+  8: 'view unpublished group_node:city_service entity'
+  9: 'delete any group_node:city_service entity'
+  10: 'create group_node:news entity'
+  11: 'delete any group_node:news entity'
+  12: 'delete own group_node:news entity'
+  13: 'update any group_node:news entity'
+  14: 'update own group_node:news entity'
+  15: 'view group_node:news entity'
+  16: 'view unpublished group_node:news entity'
+  17: 'create group_node:guide entity'
+  18: 'delete any group_node:guide entity'
+  19: 'delete own group_node:guide entity'
+  20: 'update any group_node:guide entity'
+  21: 'update own group_node:guide entity'
+  22: 'view group_node:guide entity'
+  23: 'view unpublished group_node:guide entity'
+  24: 'create group_node:information entity'
+  25: 'delete any group_node:information entity'
+  26: 'delete own group_node:information entity'
+  27: 'update any group_node:information entity'
+  28: 'update own group_node:information entity'
+  29: 'view group_node:information entity'
+  30: 'view unpublished group_node:information entity'
+  31: 'create group_node:event entity'
+  32: 'delete any group_node:event entity'
+  33: 'delete own group_node:event entity'
+  34: 'update any group_node:event entity'
+  35: 'update own group_node:event entity'
+  36: 'view group_node:event entity'
+  37: 'view unpublished group_node:event entity'
+  38: 'create group_media:document entity'
+  39: 'delete any group_media:document entity'
+  40: 'delete own group_media:document entity'
+  41: 'update any group_media:document entity'
+  42: 'update own group_media:document entity'
+  43: 'view group_media:document entity'
+  44: 'view unpublished group_media:document entity'
+  45: 'create group_media:image entity'
+  46: 'delete any group_media:image entity'
+  47: 'delete own group_media:image entity'
+  48: 'update any group_media:image entity'
+  49: 'update own group_media:image entity'
+  50: 'view group_media:image entity'
+  51: 'view unpublished group_media:image entity'
+  52: 'create group_media:video entity'
+  53: 'delete any group_media:video entity'
+  54: 'delete own group_media:video entity'
+  55: 'update any group_media:video entity'
+  56: 'update own group_media:video entity'
+  57: 'view group_media:video entity'
+  58: 'view unpublished group_media:video entity'
+  59: 'access group_media overview'
+  60: 'create group_node:notification entity'
+  61: 'delete any group_node:notification entity'
+  62: 'delete own group_node:notification entity'
+  63: 'update any group_node:notification entity'
+  64: 'update own group_node:notification entity'
+  65: 'view group_node:notification entity'
+  66: 'view unpublished group_node:notification entity'
+  70: 'create group_media:audio entity'
+  71: 'delete any group_media:audio entity'
+  72: 'delete own group_media:audio entity'
+  73: 'update any group_media:audio entity'
+  74: 'update own group_media:audio entity'
+  75: 'view group_media:audio entity'
+  76: 'view unpublished group_media:audio entity'
