--- a/web/sites/default/config/group.role.project-outsider.yml
+++ b/web/sites/default/config/group.role.project-outsider.yml
@@ -18,4 +18,8 @@ permissions:
   3: 'view group_node:guide entity'
   4: 'view group_node:information entity'
   5: 'view group_node:event entity'
-  11: 'view group_node:notification entity'
+  6: 'view group_node:notification entity'
+  8: 'view group_media:audio entity'
+  9: 'view group_media:document entity'
+  10: 'view group_media:image entity'
+  11: 'view group_media:video entity'
