--- a/web/sites/default/config/user.role.sitewide_editor.yml
+++ b/web/sites/default/config/user.role.sitewide_editor.yml
@@ -15,12 +15,48 @@ permissions:
   - 'access content overview'
   - 'access taxonomy overview'
   - 'administer nodes'
+  - 'create alert content'
+  - 'edit any alert content'
+  - 'edit any audio_file media'
+  - 'edit any building content'
+  - 'edit any city_service content'
+  - 'edit any document media'
+  - 'edit any event content'
+  - 'edit any guide content'
+  - 'edit any image media'
+  - 'edit any information content'
+  - 'edit any news content'
+  - 'edit any notification content'
+  - 'edit any service_location content'
+  - 'edit any video media'
   - 'edit terms in audience'
   - 'edit terms in community_actions'
   - 'edit terms in topics'
+  - 'revert alert revisions'
+  - 'revert all revisions'
+  - 'revert building revisions'
+  - 'revert city_service revisions'
+  - 'revert event revisions'
+  - 'revert guide revisions'
+  - 'revert information revisions'
+  - 'revert news revisions'
+  - 'revert notification revisions'
+  - 'revert service_location revisions'
   - 'schedule editorial transition archive'
   - 'schedule editorial transition archived_draft'
   - 'schedule editorial transition archived_published'
   - 'schedule editorial transition create_new_draft'
   - 'schedule editorial transition publish'
+  - 'update any media'
+  - 'view alert revisions'
+  - 'view all media revisions'
+  - 'view all revisions'
   - 'view any unpublished content'
+  - 'view building revisions'
+  - 'view city_service revisions'
+  - 'view event revisions'
+  - 'view guide revisions'
+  - 'view information revisions'
+  - 'view news revisions'
+  - 'view notification revisions'
+  - 'view service_location revisions'
