POWR-351 Hide header search block on home and search pages

--- a/web/sites/default/config/block.block.searchapipagesearchblockformwithportlandstyle_2.yml
+++ b/web/sites/default/config/block.block.searchapipagesearchblockformwithportlandstyle_2.yml
@@ -2,6 +2,11 @@ uuid: 8c5255b7-c74d-4aa1-813c-438d94511661
 langcode: en
 status: true
 dependencies:
+  config:
+    - search_api_page.search_api_page.search_portland_gov
+  module:
+    - portland
+    - system
   theme:
     - cloudy
 id: searchapipagesearchblockformwithportlandstyle_2
@@ -13,8 +18,13 @@ plugin: portland_search_block
 settings:
   id: portland_search_block
   label: 'Search Api Page search block form with Portland style'
-  provider: core
+  provider: portland
   label_display: '0'
   search_api_page: search_portland_gov
   size: small
-visibility: {  }
+visibility:
+  request_path:
+    id: request_path
+    pages: "<front>\r\n/search"
+    negate: true
+    context_mapping: {  }
