POWR-347 categories on a node block view and placement

--- a/web/sites/default/config/block.block.views_block__categories_on_a_node_block_1.yml
+++ b/web/sites/default/config/block.block.views_block__categories_on_a_node_block_1.yml
@@ -1,18 +1,17 @@
-uuid: 1a2cd325-c61d-4225-80b8-0396535357e5
+uuid: 42f47913-1ebc-4ca9-8ee6-d7bf80aaa396
 langcode: en
 status: true
 dependencies:
   config:
     - views.view.categories_on_a_node
   module:
-    - ctools
     - views
   theme:
     - cloudy
-id: cloudy_views_block__categories_on_a_node_block
+id: views_block__categories_on_a_node_block_1
 theme: cloudy
 region: sidebar_second
-weight: -6
+weight: 0
 provider: null
 plugin: 'views_block:categories_on_a_node-block_1'
 settings:
@@ -23,14 +22,4 @@ settings:
   views_label: ''
   items_per_page: none
   context_mapping: {  }
-visibility:
-  'entity_bundle:node':
-    id: 'entity_bundle:node'
-    bundles:
-      city_service: city_service
-      guide: guide
-      information: information
-      news: news
-    negate: false
-    context_mapping:
-      node: '@node.node_route_context:node'
+visibility: {  }
