POWR-388 Top search block and view tweaks

--- a/web/sites/default/config/views.view.admin_content_services.yml
+++ b/web/sites/default/config/views.view.admin_content_services.yml
@@ -29,7 +29,7 @@ _core:
 id: admin_content_services
 label: 'Admin: Content: Services'
 module: node
-description: 'Find and manage content.'
+description: 'Find and manage service content.'
 tag: default
 base_table: node_field_data
 base_field: nid
