--- a/web/sites/default/config/views.view.top_searches.yml
+++ b/web/sites/default/config/views.view.top_searches.yml
@@ -42,25 +42,26 @@ display:
           sort_asc_label: Asc
           sort_desc_label: Desc
       pager:
-        type: full
+        type: some
         options:
-          items_per_page: 50
-          tags:
-            previous: '‹ Previous'
-            next: 'Next ›'
-            first: '« First'
-            last: 'Last »'
+          items_per_page: 10
+          offset: 0
       style:
         type: html_list
         options:
           grouping: {  }
-          row_class: ''
-          default_row_class: true
+          row_class: d-inline-block
+          default_row_class: false
           type: ul
-          wrapper_class: item-list
+          wrapper_class: 'item-list text-center'
           class: ''
       row:
         type: fields
+        options:
+          default_field_elements: false
+          inline: {  }
+          separator: ''
+          hide_empty: false
       fields:
         field_search_link:
           id: field_search_link
@@ -72,18 +73,18 @@ display:
           label: ''
           exclude: false
           alter:
-            alter_text: false
-            text: ''
-            make_link: false
-            path: ''
+            alter_text: true
+            text: '{{ field_search_link__title }}'
+            make_link: true
+            path: '{{ field_search_link__uri }}'
             absolute: false
             external: false
-            replace_spaces: false
+            replace_spaces: true
             path_case: none
             trim_whitespace: false
             alt: ''
             rel: ''
-            link_class: ''
+            link_class: 'badge badge-secondary'
             prefix: ''
             suffix: ''
             target: ''
@@ -105,7 +106,7 @@ display:
           element_label_colon: false
           element_wrapper_type: ''
           element_wrapper_class: ''
-          element_default_classes: true
+          element_default_classes: false
           empty: ''
           hide_empty: false
           empty_zero: false
@@ -226,7 +227,50 @@ display:
             max: ''
             value: '+0 minutes'
             type: offset
-          group: 1
+          group: 2
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+            placeholder: ''
+            min_placeholder: ''
+            max_placeholder: ''
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          plugin_id: datetime
+        field_active_time_frame_value_1:
+          id: field_active_time_frame_value_1
+          table: node__field_active_time_frame
+          field: field_active_time_frame_value
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: empty
+          value:
+            min: ''
+            max: ''
+            value: ''
+            type: date
+          group: 2
           exposed: false
           expose:
             operator_id: ''
@@ -269,7 +313,50 @@ display:
             max: ''
             value: '+0 minutes'
             type: offset
-          group: 1
+          group: 3
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+            placeholder: ''
+            min_placeholder: ''
+            max_placeholder: ''
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          plugin_id: datetime
+        field_active_time_frame_end_value_1:
+          id: field_active_time_frame_end_value_1
+          table: node__field_active_time_frame
+          field: field_active_time_frame_end_value
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: empty
+          value:
+            min: ''
+            max: ''
+            value: ''
+            type: date
+          group: 3
           exposed: false
           expose:
             operator_id: ''
@@ -300,6 +387,19 @@ display:
             group_items: {  }
           plugin_id: datetime
       sorts:
+        field_active_time_frame_value:
+          id: field_active_time_frame_value
+          table: node__field_active_time_frame
+          field: field_active_time_frame_value
+          relationship: none
+          group_type: group
+          admin_label: ''
+          order: DESC
+          exposed: false
+          expose:
+            label: ''
+          granularity: day
+          plugin_id: datetime
         title:
           id: title
           table: node_field_data
@@ -337,6 +437,8 @@ display:
         operator: AND
         groups:
           1: AND
+          2: OR
+          3: OR
       display_extenders: {  }
     display_plugin: default
     display_title: Master
@@ -346,7 +448,22 @@ display:
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
-        - url.query_args
+        - 'user.node_grants:view'
+        - user.permissions
+      max-age: -1
+      tags:
+        - 'config:field.storage.node.field_search_link'
+  block_1:
+    display_plugin: block
+    id: block_1
+    display_title: Block
+    position: 1
+    display_options:
+      display_extenders: {  }
+    cache_metadata:
+      contexts:
+        - 'languages:language_content'
+        - 'languages:language_interface'
         - 'user.node_grants:view'
         - user.permissions
       max-age: -1
@@ -370,6 +487,7 @@ display:
         description: 'Find and manage content'
         weight: -10
       display_extenders: {  }
+      enabled: false
     display_plugin: page
     display_title: Page
     id: page
@@ -378,7 +496,6 @@ display:
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
-        - url.query_args
         - 'user.node_grants:view'
         - user.permissions
       max-age: -1
