--- a/web/sites/default/config/views.view.top_search_content.yml
+++ b/web/sites/default/config/views.view.top_search_content.yml
@@ -13,9 +13,9 @@ dependencies:
 _core:
   default_config_hash: tS8PbpJX90aRFC3-UTgXzdqkq7_2frk2pz4TMijEebM
 id: top_search_content
-label: 'Top search content'
+label: 'Admin: Content: Top Searches'
 module: node
-description: 'Find and manage content.'
+description: 'Find and manage top search content.'
 tag: default
 base_table: node_field_data
 base_field: nid
@@ -371,7 +371,7 @@ display:
           exposed: true
           expose:
             operator_id: title_op
-            label: Title
+            label: 'Title contains'
             description: ''
             use_operator: false
             operator: title_op
@@ -383,6 +383,7 @@ display:
               authenticated: authenticated
               anonymous: '0'
               administrator: '0'
+              sitewide_editor: '0'
             placeholder: ''
           is_grouped: false
           group_info:
@@ -399,47 +400,6 @@ display:
           plugin_id: string
           entity_type: node
           entity_field: title
-        langcode:
-          id: langcode
-          table: node_field_data
-          field: langcode
-          relationship: none
-          group_type: group
-          admin_label: ''
-          operator: in
-          value: {  }
-          group: 1
-          exposed: true
-          expose:
-            operator_id: langcode_op
-            label: Language
-            description: ''
-            use_operator: false
-            operator: langcode_op
-            identifier: langcode
-            required: false
-            remember: false
-            multiple: false
-            remember_roles:
-              authenticated: authenticated
-              anonymous: '0'
-              administrator: '0'
-            reduce: false
-          is_grouped: false
-          group_info:
-            label: ''
-            description: ''
-            identifier: ''
-            optional: true
-            widget: select
-            multiple: false
-            remember: false
-            default_group: All
-            default_group_multiple: {  }
-            group_items: {  }
-          plugin_id: language
-          entity_type: node
-          entity_field: langcode
         status:
           id: status
           table: node_field_data
@@ -494,7 +454,7 @@ display:
             label: 'Active time frame (field_active_time_frame)'
           plugin_id: datetime
           entity_type: node
-      title: 'Top search content'
+      title: 'Top Searches'
       empty:
         area_text_custom:
           id: area_text_custom
@@ -535,10 +495,10 @@ display:
         - 'config:field.storage.node.field_active_time_frame'
   page:
     display_options:
-      path: admin/content/topsearch/node
+      path: admin/content/topsearches
       menu:
-        type: 'default tab'
-        title: Content
+        type: tab
+        title: 'Top Searches'
         description: ''
         expanded: false
         parent: ''
@@ -551,6 +511,7 @@ display:
         description: 'Find and manage content'
         weight: -10
       display_extenders: {  }
+      display_description: ''
     display_plugin: page
     display_title: Page
     id: page
