POWR-388 Top search block and view tweaks

--- a/web/sites/default/config/views.view.top_searches.yml
+++ b/web/sites/default/config/views.view.top_searches.yml
@@ -44,16 +44,16 @@ display:
       pager:
         type: some
         options:
-          items_per_page: 7
+          items_per_page: 10
           offset: 0
       style:
         type: html_list
         options:
           grouping: {  }
-          row_class: 'd-inline-block pt-0'
+          row_class: d-inline-block
           default_row_class: false
           type: ul
-          wrapper_class: 'item-list text-center mb-5'
+          wrapper_class: 'item-list text-center'
           class: ''
       row:
         type: fields
@@ -84,7 +84,7 @@ display:
             trim_whitespace: false
             alt: ''
             rel: ''
-            link_class: ''
+            link_class: 'badge badge-secondary'
             prefix: ''
             suffix: ''
             target: ''
