POWR-388 Add and configure rabbit hole module to hide top search node pages

--- a/web/sites/default/config/core.extension.yml
+++ b/web/sites/default/config/core.extension.yml
@@ -105,10 +105,12 @@ module:
   portland: 0
   portland_legacy_redirects: 0
   quickedit: 0
+  rabbit_hole: 0
   rdf: 0
   redirect: 0
   redirect_404: 0
   responsive_image: 0
+  rh_node: 0
   schemata: 0
   schemata_json_schema: 0
   search_api: 0
