--- a/web/sites/default/config/lightning_core.versions.yml
+++ b/web/sites/default/config/lightning_core.versions.yml
@@ -152,3 +152,5 @@ action: 8.5.6
 bulk_update_fields: 1.0.0-alpha1
 hsts: 1.0.0
 anonymous_login: 1.1.0
+rabbit_hole: 1.0.0-beta4
+rh_node: 1.0.0-beta4
