POWR-347 another attempt at fixing line endings.

--- a/web/sites/default/config/views.view.media.yml
+++ b/web/sites/default/config/views.view.media.yml
@@ -2932,7 +2932,7 @@ display:
           exposed: true
           expose:
             operator_id: name_op
-            label: 'Audio name contains'
+            label: 'Video name contains'
             description: ''
             use_operator: false
             operator: name_op
@@ -2944,7 +2944,6 @@ display:
               authenticated: authenticated
               anonymous: '0'
               administrator: '0'
-              sitewide_editor: '0'
             placeholder: ''
           is_grouped: false
           group_info:
