POWR-374 - initial commit, added link style field to telephone and fax paragraphs, updated paragraph templates to output in intl tel format and use link style classes, replaced Phone field with Telephone paragraph in group contact info, updated help text, updated Cleave.js config to use hyphen delmiter.

--- a/web/sites/default/config/core.entity_form_display.group.bureau_office.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.bureau_office.default.yml
@@ -10,9 +10,9 @@ dependencies:
     - field.field.group.bureau_office.field_legacy_path
     - field.field.group.bureau_office.field_logo
     - field.field.group.bureau_office.field_official_organization_name
-    - field.field.group.bureau_office.field_phone
     - field.field.group.bureau_office.field_shortname_or_acronym
     - field.field.group.bureau_office.field_summary
+    - field.field.group.bureau_office.field_telephone
     - field.field.group.bureau_office.field_topics
     - group.type.bureau_office
     - image.style.thumbnail
@@ -22,17 +22,17 @@ dependencies:
     - field_group
     - image
     - maxlength
-    - telephone
+    - paragraphs
 third_party_settings:
   field_group:
     group_contact_information:
       children:
         - field_address
-        - field_phone
-        - field_email
         - field_building
+        - field_email
+        - field_telephone
       parent_name: ''
-      weight: 20
+      weight: 7
       format_type: fieldset
       format_settings:
         id: contact-information
@@ -59,7 +59,7 @@ content:
     type: chosen_select
     region: content
   field_building:
-    weight: 24
+    weight: 22
     settings:
       match_operator: CONTAINS
       size: 60
@@ -76,7 +76,7 @@ content:
     type: email_default
     region: content
   field_legacy_path:
-    weight: 25
+    weight: 8
     settings:
       size: 60
       placeholder: ''
@@ -99,13 +99,6 @@ content:
     third_party_settings: {  }
     type: string_textfield
     region: content
-  field_phone:
-    weight: 22
-    settings:
-      placeholder: ''
-    third_party_settings: {  }
-    type: telephone_default
-    region: content
   field_shortname_or_acronym:
     weight: 2
     settings:
@@ -127,6 +120,18 @@ content:
         maxlength_js_truncate_html: true
     type: string_textarea
     region: content
+  field_telephone:
+    type: entity_reference_paragraphs
+    weight: 24
+    region: content
+    settings:
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: ''
+    third_party_settings: {  }
   field_topics:
     weight: 4
     settings: {  }
