--- a/web/sites/default/config/core.entity_form_display.paragraph.telephone_button.default.yml
+++ b/web/sites/default/config/core.entity_form_display.paragraph.telephone_button.default.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.paragraph.telephone_button.field_link_style
     - field.field.paragraph.telephone_button.field_phone_number
     - paragraphs.paragraphs_type.telephone_button
   module:
@@ -12,6 +13,12 @@ targetEntityType: paragraph
 bundle: telephone_button
 mode: default
 content:
+  field_link_style:
+    weight: 1
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
+    region: content
   field_phone_number:
     weight: 0
     settings:
