--- a/web/sites/default/config/core.entity_view_display.group.elected_official.contact_information.yml
+++ b/web/sites/default/config/core.entity_view_display.group.elected_official.contact_information.yml
@@ -8,15 +8,16 @@ dependencies:
     - field.field.group.elected_official.field_building
     - field.field.group.elected_official.field_bureaus
     - field.field.group.elected_official.field_email
+    - field.field.group.elected_official.field_legacy_path
     - field.field.group.elected_official.field_logo
     - field.field.group.elected_official.field_official_title
-    - field.field.group.elected_official.field_phone
     - field.field.group.elected_official.field_shortname_or_acronym
     - field.field.group.elected_official.field_summary
+    - field.field.group.elected_official.field_telephone
     - group.type.elected_official
   module:
     - address
-    - telephone
+    - entity_reference_revisions
 id: group.elected_official.contact_information
 targetEntityType: group
 bundle: elected_official
@@ -24,7 +25,7 @@ mode: contact_information
 content:
   field_address:
     type: address_default
-    weight: 1
+    weight: 2
     region: content
     label: hidden
     settings: {  }
@@ -44,19 +45,21 @@ content:
     settings:
       link_to_entity: false
     third_party_settings: {  }
-  field_phone:
-    type: telephone_link
-    weight: 2
+  field_telephone:
+    type: entity_reference_revisions_entity_view
+    weight: 1
     region: content
-    label: hidden
+    label: above
     settings:
-      title: ''
+      view_mode: default
+      link: ''
     third_party_settings: {  }
 hidden:
   changed: true
   created: true
   field_building: true
   field_bureaus: true
+  field_legacy_path: true
   field_logo: true
   field_shortname_or_acronym: true
   field_summary: true
