--- a/web/sites/default/config/core.entity_view_display.group.program.contact_information.yml
+++ b/web/sites/default/config/core.entity_view_display.group.program.contact_information.yml
@@ -8,15 +8,16 @@ dependencies:
     - field.field.group.program.field_audience
     - field.field.group.program.field_building
     - field.field.group.program.field_email
+    - field.field.group.program.field_legacy_path
     - field.field.group.program.field_logo
-    - field.field.group.program.field_phone
     - field.field.group.program.field_shortname_or_acronym
     - field.field.group.program.field_summary
+    - field.field.group.program.field_telephone
     - field.field.group.program.field_topics
     - group.type.program
   module:
     - address
-    - telephone
+    - entity_reference_revisions
 id: group.program.contact_information
 targetEntityType: group
 bundle: program
@@ -24,25 +25,26 @@ mode: contact_information
 content:
   field_address:
     type: address_default
-    weight: 1
+    weight: 2
     region: content
     label: above
     settings: {  }
     third_party_settings: {  }
   field_email:
     type: basic_string
-    weight: 2
+    weight: 3
     region: content
     label: above
     settings: {  }
     third_party_settings: {  }
-  field_phone:
-    type: telephone_link
-    weight: 3
+  field_telephone:
+    type: entity_reference_revisions_entity_view
+    weight: 1
     region: content
     label: above
     settings:
-      title: ''
+      view_mode: default
+      link: ''
     third_party_settings: {  }
   label:
     label: hidden
@@ -57,6 +59,7 @@ hidden:
   created: true
   field_audience: true
   field_building: true
+  field_legacy_path: true
   field_logo: true
   field_shortname_or_acronym: true
   field_summary: true
