--- a/web/sites/default/config/core.entity_view_display.group.program.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.group.program.teaser.yml
@@ -8,10 +8,11 @@ dependencies:
     - field.field.group.program.field_audience
     - field.field.group.program.field_building
     - field.field.group.program.field_email
+    - field.field.group.program.field_legacy_path
     - field.field.group.program.field_logo
-    - field.field.group.program.field_phone
     - field.field.group.program.field_shortname_or_acronym
     - field.field.group.program.field_summary
+    - field.field.group.program.field_telephone
     - field.field.group.program.field_topics
     - group.type.program
 id: group.program.teaser
@@ -42,8 +43,9 @@ hidden:
   field_audience: true
   field_building: true
   field_email: true
+  field_legacy_path: true
   field_logo: true
-  field_phone: true
   field_shortname_or_acronym: true
+  field_telephone: true
   field_topics: true
   uid: true
