--- a/web/sites/default/config/core.entity_view_display.group.bureau_office.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.bureau_office.default.yml
@@ -10,9 +10,9 @@ dependencies:
     - field.field.group.bureau_office.field_legacy_path
     - field.field.group.bureau_office.field_logo
     - field.field.group.bureau_office.field_official_organization_name
-    - field.field.group.bureau_office.field_phone
     - field.field.group.bureau_office.field_shortname_or_acronym
     - field.field.group.bureau_office.field_summary
+    - field.field.group.bureau_office.field_telephone
     - field.field.group.bureau_office.field_topics
     - group.type.bureau_office
   module:
@@ -73,7 +73,7 @@ content:
   label:
     label: hidden
     type: string
-    weight: -5
+    weight: 0
     region: content
     settings:
       link_to_entity: false
@@ -88,7 +88,7 @@ hidden:
   field_legacy_path: true
   field_logo: true
   field_official_organization_name: true
-  field_phone: true
   field_shortname_or_acronym: true
+  field_telephone: true
   field_topics: true
   uid: true
