POWR-374 - fixed default value of field_link_style to be CTA

--- a/web/sites/default/config/field.field.paragraph.telephone_button.field_link_style.yml
+++ b/web/sites/default/config/field.field.paragraph.telephone_button.field_link_style.yml
@@ -22,7 +22,7 @@ required: true
 translatable: false
 default_value:
   -
-    value: outline-secondary
+    value: primary
 default_value_callback: ''
 settings: {  }
 field_type: list_string
