POWR-401 Update search result building location type to align-left

--- a/web/sites/default/config/search_api_page.search_api_page.search_portland_gov.yml
+++ b/web/sites/default/config/search_api_page.search_api_page.search_portland_gov.yml
@@ -27,7 +27,7 @@ view_mode_configuration:
   'entity:group_program': search_result
   'entity:group_project': search_result
   'entity:node_alert': teaser
-  'entity:node_building': teaser
+  'entity:node_building': search_result
   'entity:node_city_service': search_result
   'entity:node_event': search_result
   'entity:node_guide': search_result
