--- a/web/sites/default/config/core.entity_view_display.node.building.search_result.yml
+++ b/web/sites/default/config/core.entity_view_display.node.building.search_result.yml
@@ -1,17 +1,14 @@
-uuid: cb6c9df7-4fe5-4b21-b3f0-3a3b0f6c4d8b
+uuid: 2674b14c-f032-4de7-805a-ee274a337f73
 langcode: en
 status: true
 dependencies:
   config:
     - core.entity_view_mode.node.search_result
-    - field.field.node.service_location.field_building
-    - field.field.node.service_location.field_floor
-    - field.field.node.service_location.field_get_directions
-    - field.field.node.service_location.field_legacy_path
-    - field.field.node.service_location.field_open_hours
-    - field.field.node.service_location.field_summary
-    - node.type.service_location
+    - field.field.node.building.field_address
+    - field.field.node.building.field_legacy_path
+    - node.type.building
   module:
+    - address
     - ds
     - panelizer
     - user
@@ -32,7 +29,7 @@ third_party_settings:
       content:
         - 'bundle_field:node'
         - node_title
-        - field_summary
+        - field_address
     fields:
       'bundle_field:node':
         plugin_id: 'bundle_field:node'
@@ -81,25 +78,20 @@ third_party_settings:
             lb: ''
             lb-col: false
             classes: {  }
-id: node.service_location.search_result
+id: node.building.search_result
 targetEntityType: node
-bundle: service_location
+bundle: building
 mode: search_result
 content:
-  field_summary:
+  field_address:
     weight: 2
     label: hidden
-    settings:
-      link_to_entity: false
+    settings: {  }
     third_party_settings: {  }
-    type: string
+    type: address_default
     region: content
 hidden:
   content_moderation_control: true
-  field_building: true
-  field_floor: true
-  field_get_directions: true
   field_legacy_path: true
-  field_open_hours: true
   links: true
   scheduled_publication: true
