POWR-388 Adjust top searches margins and padding, add action button and description to view, change max num of displayed results, adjust permissions and no results text.

--- a/web/sites/default/config/views.view.top_searches.yml
+++ b/web/sites/default/config/views.view.top_searches.yml
@@ -44,16 +44,16 @@ display:
       pager:
         type: some
         options:
-          items_per_page: 10
+          items_per_page: 7
           offset: 0
       style:
         type: html_list
         options:
           grouping: {  }
-          row_class: d-inline-block
+          row_class: 'd-inline-block pt-0'
           default_row_class: false
           type: ul
-          wrapper_class: 'item-list text-center'
+          wrapper_class: 'item-list text-center mb-5'
           class: ''
       row:
         type: fields
