--- a/web/sites/default/config/views.view.top_search_content.yml
+++ b/web/sites/default/config/views.view.top_search_content.yml
@@ -25,9 +25,10 @@ display:
   default:
     display_options:
       access:
-        type: perm
+        type: role
         options:
-          perm: 'access content overview'
+          role:
+            administrator: administrator
       cache:
         type: tag
       query:
@@ -508,7 +509,7 @@ display:
         - url
         - url.query_args
         - 'user.node_grants:view'
-        - user.permissions
+        - user.roles
       max-age: -1
       tags:
         - 'config:field.storage.node.field_active_time_frame'
@@ -542,7 +543,7 @@ display:
         - url
         - url.query_args
         - 'user.node_grants:view'
-        - user.permissions
+        - user.roles
       max-age: -1
       tags:
         - 'config:field.storage.node.field_active_time_frame'
